--- a/detail-c.html
+++ b/detail-c.html
@@ -37,11 +37,11 @@
 
     <section id = "c-year" class = "container">
       <div class = "row">
-        <div class = "col-sm-5 explain">
+        <div class = "col-sm-4 explain">
           <li>Contemporary art is the art of today, produced in the second half of the 20th century or in the 21st century. The work of Contemporary Art is a dynamic combination of materials, methods, concepts, and subjects that continue the challenging of boundaries that was already well underway in the 20th century.</li>
           <li>The pieces of Contemporary Art chosen in this dataset are among twenty years: 1950 ~ 1970. The high peak of it is Year 1959 to Year 1979, which is also the high peak for the actual development of Contemporary Art.</li>
         </div>
-        <div class = "col-sm-7">
+        <div class = "col-sm-8">
           <img class ="portrait" src = "images/c-y.png">
         </div>
     </section>
@@ -49,10 +49,10 @@
 
     <section id = "c-emotion" class = "container">
       <div class = "row">
-        <div class = "col-sm-7">
+        <div class = "col-sm-8">
           <img class ="portrait" src = "images/c-e.png">
         </div>
-        <div class = "col-sm-5 explain">
+        <div class = "col-sm-4 explain">
           <li>This bubble chart shows the emotion average annotation of  Contemporary Art. Different colors of bubbles mean different emotion types. Green bubbles represent positive emotions; orange bubbles represent negative emotions and blue bubbles represent other emotions--mixed or neutral. The color inside each emotion type is from dark to light according to the average annotations.</li>
           <li>This bubble chart shows that the anticipation gets the most consistent label. </li>
           <li>The positive emotions and negative emotions have the similar level of annotation scores. In the work of Contemporary Art, there are both positive and negative work.</li>
@@ -61,13 +61,13 @@
 
     <section id = "c-rate" class = "container">
       <div class = "row">
-        <div class = "col-sm-7 explain">
+        <div class = "col-sm-6 explain">
           <li>This bar chart shows How did the annotators like the piece of Contemporary Art  on average (-3 (strongly dislike) to 3 (strongly like)).</li>
           <li>The colors of green mean like, gray means neither like nor dislike and the colors of oranges mean dislike. The colors change from dark to light according to how much the annotators like the piece of art work.</li>
           <li>In this bar chart, we can see that most of the annotators chose ‘neither like nor dislike it”, which is 106 and more than the total amount of all the other choices. 55 annotators chose ‘dislike it somewhat’, which is much more than the number of people that chose “like it’ and ‘ like it somewhat’. </li>
           <li>We can come to the conclusion that the annotators hold a relatively neutral attitude to the style of Contemporary Art.</li>
         </div>
-        <div class = "col-sm-5">
+        <div class = "col-sm-6">
           <img class ="portrait" src = "images/c-r.png">
         </div>
     </section>
@@ -75,7 +75,41 @@
       <div class="arrow"></div>
       <div class="stick"></div>
     </div>
+    <section id="category">
+      <div class="container">
+        <!-- <h3>Click on each art style to see details</h3> -->
+        <div class = "row">
+         <div class="imgcard col-sm-4" onclick="{location.href='detail.html'}">
+            <img src="images/r.png" style="width:100%">
+             <div class="container">
+                 <p>Renaissance Art</p>
+             </div>
+         </div>
 
+         <div class="imgcard col-sm-4" onclick="{location.href='detail-pr.html'}">
+            <img src="images/pr.png" style="width:100%"/>
+             <div class="container">
+                 <p>Post Renaissance Art</p>
+             </div>
+         </div>
+
+        <div class="imgcard col-sm-4" onclick="{location.href='detail-m.html'}">
+            <img src="images/m.jpeg" style="width:100%">
+             <div class="container">
+                 <p>Modern Art</p>
+             </div>
+        </div>
+
+<!--         <div class="imgcard col-sm-4" onclick="{location.href='detail-c.html'}">
+          <img src="images/c.png" style="width:100%"/>
+           <div class="container">
+               <p>Contemporary Art</p>
+           </div>
+       </div> -->
+
+       </div>
+      </div>
+    </section>
 
 
     <footer class = "container" >
