--- a/detail.html
+++ b/detail.html
@@ -37,12 +37,12 @@
 
     <section id = "r-year" class = "container">
       <div class = "row">
-        <div class = "col-sm-5 explain">
+        <div class = "col-sm-4 explain">
           <li>The Renaissance refers to the era in Europe from the 14th to the 16th century in which a new style in painting, sculpture and architecture developed after the Gothic. </li>
           <li>Derived from the French word, renaissance, and the Italian word rinascità, both meaning ‘rebirth’, the Renaissance was a period when scholars and artists began to investigate what they believed to be a revival of classical learning, literature and art. </li>
           <li>From the visualization, we can see the work of Renaissance Art the researchers choose are from year 1415 to year 1625, and it is obvious that year 1450 to year 1530 are the best years for Renaissance Art.</li>
         </div>
-        <div class = "col-sm-7">
+        <div class = "col-sm-8">
           <img class ="portrait" src = "images/r-y.png">
         </div>
     </section>
@@ -50,10 +50,10 @@
 
     <section id = "r-emotion" class = "container">
       <div class = "row">
-        <div class = "col-sm-7">
+        <div class = "col-sm-8">
           <img class ="portrait" src = "images/r-e.png">
         </div>
-        <div class = "col-sm-5 explain">
+        <div class = "col-sm-4 explain">
           <li>This bubble chart shows the emotion average annotations of  Renaissance Art. The bubbles of green colors represent positive emotions; the bubbles of orange colors represent negative emotions; the bubbles of blue colors represent other emotions--mixed or neutral. The color inside each emotion type is from dark to light according to the average annotations. </li>
           <li>From this chart, it is obvious that annotators provided the most consistent labels for positive emotions including trust, happiness, humility, etc. One possible reason can be that most renaissance arts reflect the theme and emotion of positive, because one idea during the Renaissance is that people were able to experience God directly and should have a personal, emotional relationship to their faith. God had made the world but humans were able to share in his glory by becoming creators themselves.</li>
         </div>
@@ -61,16 +61,62 @@
 
     <section id = "r-rate" class = "container">
       <div class = "row">
-        <div class = "col-sm-7 explain">
+        <div class = "col-sm-6 explain">
           <li>This bar chart shows How did the annotators like the piece on average (-3 (strongly dislike) to 3 (strongly like)).</li>
           <li>The colors of green mean like, gray means neither like nor dislike and the colors of oranges mean dislike. The colors change from dark to light according to how much the annotators like the piece of art work.</li>
           <li>The colors of green mean like, gray means neither like nor dislike and the colors of oranges mean dislike. The colors change from dark to light according to how much the annotators like the piece of art work.</li>
           <li>We can come to the conclusion that work of Renaissance Art is liked by people.</li>
         </div>
-        <div class = "col-sm-5">
+        <div class = "col-sm-6">
           <img class ="portrait" src = "images/r-r.png">
         </div>
     </section>
+
+
+    <section id="category">
+      <div class="container">
+        <!-- <h3>Click on each art style to see details</h3> -->
+        <div class = "row">
+<!--          <div class="imgcard col-sm-3" onclick="{location.href='detail.html'}">
+            <img src="images/r.png" style="width:100%">
+             <div class="container">
+                 <p>Renaissance Art</p>
+             </div>
+         </div> -->
+
+         <div class="imgcard col-sm-4" onclick="{location.href='detail-pr.html'}">
+            <img src="images/pr.png" style="width:100%"/>
+             <div class="container">
+                 <p>Post Renaissance Art</p>
+             </div>
+         </div>
+
+        <div class="imgcard col-sm-4" onclick="{location.href='detail-m.html'}">
+            <img src="images/m.jpeg" style="width:100%">
+             <div class="container">
+                 <p>Modern Art</p>
+             </div>
+        </div>
+
+        <div class="imgcard col-sm-4" onclick="{location.href='detail-c.html'}">
+          <img src="images/c.png" style="width:100%"/>
+           <div class="container">
+               <p>Contemporary Art</p>
+           </div>
+       </div>
+
+       </div>
+    </div>
+  </section>
+
+
+
+
+
+
+
+
+
     <div id="gotop">
       <div class="arrow"></div>
       <div class="stick"></div>
