--- a/about.html
+++ b/about.html
@@ -44,9 +44,9 @@
      <section id = "LL" class = "container">
       <div class = "row">
         <div class = "col-sm-4">
-          <img class ="portrait" src = "images/style_category_meanRate@2x.png" style="width:200px;height:200px;border-radius:50% 50% 50% 50%;position: absolute;left: 50%; top: 50%; transform: translate(-50%,-50%);">
+          <img src = "images/style_category_meanRate@2x.png" style="width:200px;height:200px;border-radius:50% 50% 50% 50%;position: absolute;left: 50%; top: 50%; transform: translate(-50%,-50%);">
         </div>
-        <div class = "col-sm-8 explain">
+        <div class = "col-sm-8">
           <div>
             <h3>Ling Liu</h3>
             <p>
@@ -64,9 +64,9 @@
     <section id = "LS" class = "container">
       <div class = "row">
         <div class = "col-sm-4">
-          <img class ="portrait" src = "images/LanSang.jpg" style="width:200px;height:200px;border-radius:50%;position: absolute;left: 50%; top: 50%; transform: translate(-50%,-50%);">
+          <img src = "images/LanSang.jpg" style="width:200px;height:200px;border-radius:50%;position: absolute;left: 50%; top: 50%; transform: translate(-50%,-50%);">
         </div>
-        <div class = "col-sm-8 explain">
+        <div class = "col-sm-8">
           <div>
             <h3>Lan Sang</h3>
             <p>
@@ -84,16 +84,16 @@
     <section id = "ZZ" class = "container">
       <div class = "row">
         <div class = "col-sm-4">
-          <img class ="portrait" src = "images/zz.jpeg" style="width:200px;height:200px;border-radius:50%;position: absolute;left: 50%; top: 50%; transform: translate(-50%,-50%);">
+          <img src = "images/zz.jpeg" style="width:200px;height:200px;border-radius:50%;position: absolute;left: 50%; top: 50%; transform: translate(-50%,-50%);">
         </div>
-        <div class = "col-sm-8 explain">
+        <div class = "col-sm-8">
           <div>
             <h3>Ziying Zhang</h3>
             <p>
               <StrutAlign><img src="images/degree.png" style="height: 40px; width: 40px; margin-top: 10px; margin-right: 20px;"></StrutAlign>A master student in Computer Science.
             </p>
             <p>
-              <StrutAlign><img src="images/duty.png" style="height: 40px; width: 40px; margin-top: 10px; margin-right: 20px;"></StrutAlign>Design and build all pages of this website. Summarize the work.
+              <StrutAlign><img src="images/duty.png" style="height: 40px; width: 40px; margin-top: 10px; margin-right: 20px;"></StrutAlign>Design and build all pages of this website and the design roadmap.
             </p>
             <p>
               <StrutAlign><img src="images/tool.png" style="height: 40px; width: 40px; margin-top: 10px; margin-right: 20px;"></StrutAlign>HTML5, CSS3, JavaScript, Sketch, Venngage
