--- a/detail-pr.html
+++ b/detail-pr.html
@@ -37,11 +37,11 @@
 
     <section id = "pr-year" class = "container">
       <div class = "row">
-        <div class = "col-sm-5 explain">
+        <div class = "col-sm-4 explain">
           <li>The Post Renaissance Art is from about Year 1600 to Year 1850. It includes Baroque Art, Rococo Art, Neoclassical Art and Romanticism Movement. It is an important time period of the western art history.</li>
           <li>From this visualization, we can see two peak periods of Post Renaissance Art: First is around Year 1630; the second one is from about Year 1760 to Year Year 1870. </li>
         </div>
-        <div class = "col-sm-7">
+        <div class = "col-sm-8">
           <img class ="portrait" src = "images/pr-y.png">
         </div>
     </section>
@@ -49,10 +49,10 @@
 
     <section id = "pr-emotion" class = "container">
       <div class = "row">
-        <div class = "col-sm-7">
+        <div class = "col-sm-8">
           <img class ="portrait" src = "images/pr-e.png">
         </div>
-        <div class = "col-sm-5 explain">
+        <div class = "col-sm-4 explain">
           <li>This bubble chart shows the emotion average annotation of  Post Renaissance Art. The bubbles of green colors represent positive emotions; the bubbles of orange colors represent negative emotions; the bubbles of blue colors represent other emotions--mixed or neutral. The color inside each emotion type is from dark to light according to the average annotations.</li>
           <li>From this bubble chart, we can see that the main type of emotions that annotators feel is the positive emotions. Happiness, Trust and humility has the average annotations of 0.372, 0.227 and 0.194, which is much higher than any other emotions.</li>
         </div>
@@ -60,15 +60,53 @@
 
     <section id = "pr-rate" class = "container">
       <div class = "row">
-        <div class = "col-sm-7 explain">
+        <div class = "col-sm-6 explain">
           <li>This bar chart shows How did the annotators like the piece of Post Renaissance Art  on average (-3 (strongly dislike) to 3 (strongly like)).</li>
           <li>We use colors of green to represent ‘like’. We also use color of gray to represent  ‘neither like nor dislike’ and the colors of oranges to represent ‘dislike’. The colors change from dark to light according to how much the annotators like the piece of art work.</li>
           <li>From this visualization, it is clear that pieces of Post Renaissance are popular among the annotators. 464 annotators chose ‘like it’, which is more than the total amount of all the other choices. Besides, there are 286 annotators chose  ‘like it somewhat’. So most annotators like the work of Post Renaissance Art.</li>
         </div>
-        <div class = "col-sm-5">
+        <div class = "col-sm-6">
           <img class ="portrait" src = "images/pr-r.png">
         </div>
     </section>
+
+    <section id="category">
+      <div class="container">
+        <!-- <h3>Click on each art style to see details</h3> -->
+        <div class = "row">
+         <div class="imgcard col-sm-4" onclick="{location.href='detail.html'}">
+            <img src="images/r.png" style="width:100%">
+             <div class="container">
+                 <p>Renaissance Art</p>
+             </div>
+         </div>
+
+<!--          <div class="imgcard col-sm-4" onclick="{location.href='detail-pr.html'}">
+            <img src="images/pr.png" style="width:100%"/>
+             <div class="container">
+                 <p>Post Renaissance Art</p>
+             </div>
+         </div> -->
+
+        <div class="imgcard col-sm-4" onclick="{location.href='detail-m.html'}">
+            <img src="images/m.jpeg" style="width:100%">
+             <div class="container">
+                 <p>Modern Art</p>
+             </div>
+        </div>
+
+        <div class="imgcard col-sm-4" onclick="{location.href='detail-c.html'}">
+          <img src="images/c.png" style="width:100%"/>
+           <div class="container">
+               <p>Contemporary Art</p>
+           </div>
+       </div>
+
+       </div>
+    </div>
+  </section>
+
+
 
     <div id="gotop">
       <div class="arrow"></div>
