--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="col-lg-12">
                         <div class="text-container">
                             <h1>Emotion in Art </h1>
-                            <p class="p-heading p-large">asdfghjklasdfghjklasdfghjklasdfghjklasdfghjklasdfghjklasdfghjklasdfghjklsdfghjklsdfghjklasdfghjklasdfghjklasdfghjkasdfghjkasdfghjkl</p>
+                            <p class="p-large">Explore the emotions we can get from arts and how they influence our favor of different art styles.</p>
                         </div>
                     </div> 
                 </div> 
@@ -110,7 +110,7 @@
           </div>
         </div>
         <div class = "col-sm-6">
-          <img class ="portrait" src = "images/emotion_type_meanScore@2x.png" style="max-width: 90%;max-height: 90%; width: auto; height: auto;">
+          <img class ="portrait" src = "images/emotion_type_meanScore@2x.png" style="max-width: 100%;max-height: 100%; width: auto; height: auto;">
         </div>
     </section>
 
@@ -118,10 +118,10 @@
     <section id = "corralation" class = "container">
       <div class = "row">
         <h2>What is the relation between the evoked emotions and people's preference?</h2>
-        <div class = "col-sm-8">
-          <img class ="portrait" src = "images/emotionByType.png">
+        <div class = "col-sm-6">
+          <img class ="portrait" src = "images/emotionByType.png" style="margin-top: 80px;">
         </div>
-        <div class = "col-sm-4 explain">
+        <div class = "col-sm-6 explain">
           <p>Is there any relationship between the degree people like an art Style and the type and degree of Emotions that art Style evokes? <b>Very likely! </b> <b> People tend to like arts evoking strong <span style="color:#53da18;">Positive</span> emotions more.</b></p>
           <p><span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance Arts</span> are the two art Styles people like most. They both evoke the strongest <span style="color:#53da18;">Positive</span> emotions and weakest <span style="color:#0b5394;">Other or Mixed</span> emotions. The <span style="color:#ff9900;">Negative</span> emotions they evoke are also relatively strong compared to the emotions evoked by <span style="color:#ba55d3;">Modern</span> and <span style="color:#ff0000;">Contemporary Arts</span>. </p>
             <p><span style="color:#ff0000;">Contemporary</span> Art is the art Style people dislike. The emotions it arouses tend to be of a lower degree. The strongest emotion type it evokes is <span style="color:#0b5394;">Other or Mixed</span> and the weakest emotion type it evokes is <span style="color:#53da18;">Positive</span> and <span style="color:#ff9900;">Negative</span>, a pattern opposite to <span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance Arts</span>. </p>
