add reference and profile image

--- a/design.html
+++ b/design.html
@@ -54,6 +54,25 @@
           <img class ="portrait" src = "images/roadmap.png">
         </div>
     </section>
+
+
+    <section id = "reference" class = "container">
+      <h2>Reference</h2>
+      <div class = "row" style="margin-top: 40px;">
+
+        <ol>
+          <li>WikiArt Emotions: An Annotated Dataset of Emotions Evoked by Art. Saif M. Mohammad and Svetlana Kiritchenko. In Proceedings of the 11th Edition of the Language Resources and Evaluation Conference (LREC-2018), May 2018, Miyazaki, Japan.</li>
+          <li>Dataset:<a href="http://saifmohammad.com/WebPages/wikiartemotions.html" style="color:blue;">WikiArt Emotions Dataset</a></li>
+          <li>Tools:
+            <ul>
+              <li><a href="https://flourish.studio/" style="color:blue;">Flourish</a></li>
+              <li><a href="https://www.tableau.com/" style="color:blue;">Tableau</a></li>
+              <li><a href="https://matplotlib.org/" style="color:blue;">Matplotlib</a></li>
+              <li><a href="https://infograph.venngage.com/ps/0BEetzP3eto/neon-startup-product-roadmap_new" style="color:blue;">Venngage</a></li>               
+            </ul>
+          </li>
+         </ol>
+    </section>
  
 
   <div id="gotop">
