--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
      <section id = "LL" class = "container">
       <div class = "row">
         <div class = "col-sm-4">
-          <img src = "images/style_category_meanRate@2x.png" style="width:200px;height:200px;border-radius:50% 50% 50% 50%;position: absolute;left: 50%; top: 50%; transform: translate(-50%,-50%);">
+          <img src = "images/ll.png" style="width:200px;height:200px;border-radius:50% 50% 50% 50%;position: absolute;left: 50%; top: 50%; transform: translate(-50%,-50%);">
         </div>
         <div class = "col-sm-8">
           <div>
