--- a/index.html
+++ b/index.html
@@ -130,11 +130,12 @@
       </div>
     </section>
 
-
+    <div class="container">
+      <h3>Style details</h3>
+    </div>
 
     <section id="category">
       <div class="container">
-        <!-- <h3>Click on each art style to see details</h3> -->
         <div class = "row">
          <div class="imgcard col-sm-3" onclick="{location.href='detail.html'}">
             <img src="images/r.png" style="width:100%">
