--- a/design.html
+++ b/design.html
@@ -39,7 +39,7 @@
     <section id = "datacollection" class = "container">
       <h2>Data Collection</h2>
       <div class = "row" style="margin-top: 40px;">
-        <p style="margin-left: 20px;">This work is based on WikiArt Emotions Dataset. The dataset integrated both basic and emotion information of more than 4000 artworks. For each artwork, the basic information attributes in the dataset included Title, Artist, Year, Style, Category, Painting or not, Face or Body, and related URL. Other attributes were related to emotions. An average number of the degree of like was regarded as the Main Rate. And for each emotion, there was an average number to record the proportion of selecting it for this artwork. </p>
+        <p style="margin-left: 20px;">This work is based on WikiArt Emotions Dataset. The dataset integrated both basic and emotion information of more than 4000 artworks. For each artwork, the basic information attributes in the dataset included Title, Artist, Year, Style, Category, Painting or not, Face or Body, and related URL. Other attributes were related to emotions. An average number of the degree of like was regarded as the Mean Rating. And for each emotion, there was an average number to record the proportion of selecting it for this artwork. </p>
         <div class = "col-sm-12">
           <img class ="portrait" src = "images/DataCollection.png">
         </div>
